# Mock_Project

./: CMakeLists.txt  README.md  cmake_install.cmake  code_TagLib.txt  dataUser.txt  main.cpp  makefile  playlistsData.txt
Code_Controller/Include/: ControllerBase.hpp  ControllerManager.hpp  DetailedPlaylistController.hpp  FileController.hpp  MediaFileController.hpp  MetadataController.hpp  PlayingMediaController.hpp  PlaylistController.hpp
Code_Controller/Source/: ControllerManager.cpp  DetailedPlaylistController.cpp  FileController.cpp  MediaFileController.cpp  MetadataController.cpp  PlayingMediaController.cpp  PlaylistController.cpp
Code_Controller/docs/: ClassDiagram (1).plantuml  Controller.plantuml  Model.plantuml  View.plantuml
Code_Controller/header/controller/: DetailedPlaylistController.hpp  FileController.hpp  MainMenuController.hpp  MediaFileController.hpp  MetadataController.hpp  PlayingMediaController.hpp  PlaylistController.hpp  ScanfOptionController.hpp
Code_Controller/header/model/: ModelManager.hpp  PlaylistLibrary.hpp
Code_Controller/header/view/: ViewDetailedPlaylist.hpp
Code_Controller/source/: main.cpp
Code_Controller/source/controller/: ControllerManager.cpp  DetailedPlaylistController.cpp  FileController.cpp  MainMenuController.cpp  MediaFileController.cpp  MetadataController.cpp  PlayingMediaController.cpp  PlaylistController.cpp  ScanfOptionController.cpp
Code_Controller/source/model/: DeviceManager.cpp  (+3 more)
MOCK_Full_16_1/: playlistsData.txt
MOCK_Playlist_Index_Complete/: dataUser.txt  playlistsData.txt
MOCK_Project_16_1/: playlistsData.txt
Mock_Pjoject_main/: makefile  xx.cpp
Mock_Pjoject_main/docs/: ClassDiagram.plantuml  test_mediafile.txt
Mock_Project-15_1/: playlistsData.txt
Mock_Project-T_playing_scanUSB/: makefile  mount_USB.txt  note.txt
Mock_Project-T_playing_scanUSB/source/: main.cpp
Mock_Project_main/source/: main.cpp
Project_12_1_EDIT/: README.md
Project_21_1 _Merge/: makefile  playlistsData.txt
Usecase_diagram/adjustVolume/: adjustVolume.plantuml
Usecase_diagram/createPlaylist/: createPlaylist.plantuml
Usecase_diagram/handleButtonPress/: handleButtonPress.plantuml
Usecase_diagram/mediaFileBrowse/: mediaFileBrowse.plantuml
Usecase_diagram/playMediaFile/: playMediaFile.plantuml
Usecase_diagram/viewMediaFile/: viewMediaFile.plantuml
V3_managePlaylist/: makefile
View/: Makefile  Test_view.cpp
View/include/: ViewBase.h  ViewManager.h  ViewMediaFile.h  ViewMenu.h  ViewMetadata.h  ViewPlay.h  ViewPlaylist.h  ViewScanfOption.h
View/src/: ViewDetailedPlaylist.cpp  ViewManager.cpp  ViewMediaFile.cpp  ViewMenu.cpp  ViewMetadata.cpp  ViewPlay.cpp  ViewPlaylist.cpp  ViewScanfOption.cpp
class_diagram/: class_diagram.plantuml
coverage_report/: index.ControllerManager.cpp.ee9415939255716ed1a35549514db39f.html  index.ExceptionLib.cpp.008b27bc40a2ca80c6058bc9f7e0d587.html  index.ExceptionLib.hpp.83ca89a9bfc4df8583adcbd1704a8ff5.html  index.MainMenuController.cpp.66839d16950a9440ed5439cfb4cad9f0.html  index.MediaFile.cpp.42bbab74fa3b7413418874da01549bc2.html  index.MediaFileController.cpp.f8421f0c8a6965d8e097916b959e6425.html  index.MediaLibrary.cpp.97f28b5974b084dcc12e886b2ef6e0e0.html  index.Metadata.cpp.56d9b3f51c3536c2c606b168eb95953a.html  index.MetadataController.cpp.d1827f39df79ab39570990771f9be6c0.html  index.ModelManager.cpp.382f9c275633c53b0ee822169c7bd258.html  index.ModelManager.hpp.b7320aabaa729b0dfb40fef1f1d99da1.html  index.PlayList.cpp.8572a90e067da00befd1829a9d38c3f0.html  index.PlayingMedia.cpp.fe2c122cf9ef8bfe2e76e4f3f83ea582.html  index.PlayingMediaController.cpp.24fc387e99d63a0bb827a4856d6fbe6c.html  index.PlaylistController.cpp.d209a1da4a67a11308680e775eb46500.html  index.PlaylistLibrary.cpp.90da8af8a5f3e64ffe9b1a1eceafec3d.html  index.S32K144Interface.cpp.f6b7513056c43949036d492756a2b7e3.html  index.ScanfOptionController.cpp.78fb91a5d8636555a0dadbb4ee62fdaa.html  index.ViewBase.cpp.cc5d8630103b48ccb47e423e45d892a1.html  index.ViewBase.hpp.d18d2fc790574092c36f9fbb1bad1574.html  index.ViewDetailedPlaylist.cpp.d6cccffbaa56e935f7a7c904faef6b7b.html  index.ViewMainMenu.cpp.f095f0f70666c9a155f6ca032a068694.html  index.ViewManager.cpp.e78e4130a2b38c1b3e8f18e1e0fc10d1.html  index.ViewMediaFile.cpp.418e0e6d31c7d94e1cc18be6b58ae6e0.html  index.ViewMetadata.cpp.00370128be052fb51c8c35fbfedb12ee.html  index.ViewPlay.cpp.3caaade2752d83c600d121b4adf25083.html  index.ViewPlaylist.cpp.67c663db3449212288a26e056c5c37d4.html  index.ViewScanOption.cpp.6f968ad85dfae333000e61d490f48ace.html  index.controller_manager_test.cpp.9ef1873046edbd84e957439441318187.html  index.functions.html  index.html  index.main.cpp.bfd574051572855ffede390ec872fc68.html
docs/: ClassDiagram.plantuml  Controller.plantuml  Model.plantuml  SRS.md  View.plantuml
header/controller/: ControllerManager.hpp  ExceptionLib.hpp  MainMenuController.hpp  MediaFileController.hpp  MetadataController.hpp  PlayingMediaController.hpp  PlaylistController.hpp  ScanfOptionController.hpp
header/include/: S32K144Interface.hpp  taglib.hpp
header/model/: DeviceManager.hpp  MediaFile.hpp  MediaLibrary.hpp  Metadata.hpp  ModelManager.hpp  PlayList.hpp  PlayingMedia.hpp  PlaylistLibrary.hpp
header/view/: ViewBase.hpp  ViewDetailedPlaylist.hpp  ViewMainMenu.hpp  ViewManager.hpp  ViewMediaFile.hpp  ViewMetadata.hpp  ViewPlay.hpp  ViewPlaylist.hpp  ViewScanfOption.hpp
model/src/: metadata.cpp
source/: main.cpp
source/controller/: ControllerManager.cpp  ExceptionLib.cpp  MainMenuController.cpp  MediaFileController.cpp  MetadataController.cpp  PlayingMediaController.cpp  PlaylistController.cpp  ScanfOptionController.cpp
source/include/: S32K144Interface.cpp
source/model/: DeviceManager.cpp  MediaFile.cpp  MediaLibrary.cpp  Metadata.cpp  ModelManager.cpp  PlayList.cpp  PlayingMedia.cpp  PlaylistLibrary.cpp
source/view/: ViewBase.cpp  ViewDetailedPlaylist.cpp  ViewMainMenu.cpp  ViewManager.cpp  ViewMediaFile.cpp  ViewMetadata.cpp  ViewPlay.cpp  ViewPlaylist.cpp  ViewScanOption.cpp
taglib/: main.cpp
test/: controller_manager_test.cpp
(+131 files in other folders)
